# SHARE

./: .gitignore  README.md  pyproject.toml
configs/: arcwise_data_config.json  spider2sqlite_data_config.json
data/arcwise/: baseline_sql.json  dev.json
data/spider2sqlite/: baseline_sql.json  baseline_sql_token_usage.json  dev.json  spider2sqlite_tables.json
outputs/arcwise_infer/: augmented_schema.json  final_sql.json  final_sql_by_qid.json  final_traj.jsonl  intermediate_traj.jsonl  masked_traj.jsonl  original_traj.jsonl  prompts_for_generator.jsonl  token_usage.json
outputs/spider2sqlite_infer/: all_token_usage.json  augmented_schema.json  final_sql.json  final_traj.jsonl  intermediate_traj.jsonl  masked_traj.jsonl  original_traj.jsonl  prompts_for_generator.jsonl  token_usage.json
scripts/: generate_baseline_sql.py  run_arcwise_full_pipeline.sh  run_arcwise_inference.sh
src/call_models/: call_apis.py  vllm_infer.py
src/infer/: run.py  share_models.py
